--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -87,7 +87,7 @@
     "TOAST2": "Ошибка экспорта",
     "TOAST3": "Выбранные треки удалены",
     "TOAST4": "Ошибка загрузки коллекции",
-    "TOAST5": "Ошибка загрузки трека"
+    "LOADING_ERROR": "Ошибка загрузки трека"
   },
   "CANVAS": {
     "ARCTITLE": "ЭТАЛОННЫЙ ТРЕК",
